--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Wtf r u doing now?"/>
-    <EditText
+    <Spinner
         android:id="@+id/doing_project"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Project"/>
+        android:hint="Select your project"/>
     <Chronometer
         android:id="@+id/chronometer"
         android:layout_width="wrap_content"
@@ -44,6 +44,18 @@
             android:src="@drawable/ic_stop_white_48dp"
             />
     </LinearLayout>
+    <Button
+        android:layout_marginTop="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Projects"
+        android:textColor="@color/colorPrimaryText"
+        android:background="@color/colorPrimaryDark"
+        android:onClick="newProject"/>
+    <ListView
+        android:id="@+id/tracked_time_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 
 </LinearLayout>
