--- a/app/src/main/res/layout/content_task_list.xml
+++ b/app/src/main/res/layout/content_task_list.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@+id/projects_list"
+        android:id="@+id/tasks_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
