--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,6 +45,7 @@
             />
     </LinearLayout>
     <Button
+        android:id="@+id/btn_new_project"
         android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
